// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`入口导出清单 > 导出名列表被锁定 1`] = `
[
  "AMAGI_BUS_EVENT_NAMES",
  "AdditionalType",
  "AmagiThrownError",
  "ApiError",
  "CommentType",
  "CreateApp",
  "DynamicType",
  "MajorType",
  "ValidationError",
  "amagi",
  "amagiEvents",
  "assertValidBilibiliParams",
  "assertValidDouyinParams",
  "assertValidKuaishouParams",
  "assertValidXiaohongshuParams",
  "av2bv",
  "bilibiliApiUrls",
  "bilibiliFetcher",
  "bilibiliUtils",
  "bv2av",
  "checkPassportQrcode",
  "createAmagiClient",
  "createBilibiliRoutes",
  "createBoundBilibiliFetcher",
  "createBoundDouyinFetcher",
  "createBoundKuaishouFetcher",
  "createBoundXiaohongshuFetcher",
  "createClient",
  "createDouyinRoutes",
  "createErrorResponse",
  "createKuaishouRoutes",
  "createSuccessResponse",
  "createXiaohongshuRoutes",
  "default",
  "douyinApiUrls",
  "douyinFetcher",
  "douyinPassport",
  "douyinSign",
  "douyinUtils",
  "emitApiError",
  "emitApiSuccess",
  "emitHttpRequest",
  "emitHttpResponse",
  "emitLog",
  "emitLogDebug",
  "emitLogError",
  "emitLogInfo",
  "emitLogMark",
  "emitLogWarn",
  "emitNetworkError",
  "emitNetworkRetry",
  "fetchData",
  "fetchResponse",
  "handleError",
  "isFailure",
  "isNetworkErrorResult",
  "isSuccess",
  "kuaishouApiUrls",
  "kuaishouFetcher",
  "kuaishouSign",
  "kuaishouUtils",
  "parseDmSegMobileReply",
  "qtparam",
  "requestPassportQrcode",
  "sendPassportVerifyCode",
  "unwrap",
  "validateBilibiliParams",
  "validateDouyinParams",
  "validateKuaishouParams",
  "validatePassportVerifyCode",
  "validateXiaohongshuParams",
  "wbi_sign",
  "xiaohongshuApiUrls",
  "xiaohongshuFetcher",
  "xiaohongshuSign",
  "xiaohongshuUtils",
]
`;

exports[`入口导出清单 > 每个导出的运行时类型被锁定 1`] = `
{
  "AMAGI_BUS_EVENT_NAMES": "array",
  "AdditionalType": "object",
  "AmagiThrownError": "function",
  "ApiError": "function",
  "CommentType": "object",
  "CreateApp": "function",
  "DynamicType": "object",
  "MajorType": "object",
  "ValidationError": "function",
  "amagi": "function",
  "amagiEvents": "object",
  "assertValidBilibiliParams": "function",
  "assertValidDouyinParams": "function",
  "assertValidKuaishouParams": "function",
  "assertValidXiaohongshuParams": "function",
  "av2bv": "function",
  "bilibiliApiUrls": "object",
  "bilibiliFetcher": "object",
  "bilibiliUtils": "object",
  "bv2av": "function",
  "checkPassportQrcode": "function",
  "createAmagiClient": "function",
  "createBilibiliRoutes": "function",
  "createBoundBilibiliFetcher": "function",
  "createBoundDouyinFetcher": "function",
  "createBoundKuaishouFetcher": "function",
  "createBoundXiaohongshuFetcher": "function",
  "createClient": "function",
  "createDouyinRoutes": "function",
  "createErrorResponse": "function",
  "createKuaishouRoutes": "function",
  "createSuccessResponse": "function",
  "createXiaohongshuRoutes": "function",
  "default": "function",
  "douyinApiUrls": "object",
  "douyinFetcher": "object",
  "douyinPassport": "object",
  "douyinSign": "function",
  "douyinUtils": "object",
  "emitApiError": "function",
  "emitApiSuccess": "function",
  "emitHttpRequest": "function",
  "emitHttpResponse": "function",
  "emitLog": "function",
  "emitLogDebug": "function",
  "emitLogError": "function",
  "emitLogInfo": "function",
  "emitLogMark": "function",
  "emitLogWarn": "function",
  "emitNetworkError": "function",
  "emitNetworkRetry": "function",
  "fetchData": "function",
  "fetchResponse": "function",
  "handleError": "function",
  "isFailure": "function",
  "isNetworkErrorResult": "function",
  "isSuccess": "function",
  "kuaishouApiUrls": "object",
  "kuaishouFetcher": "object",
  "kuaishouSign": "function",
  "kuaishouUtils": "object",
  "parseDmSegMobileReply": "function",
  "qtparam": "function",
  "requestPassportQrcode": "function",
  "sendPassportVerifyCode": "function",
  "unwrap": "function",
  "validateBilibiliParams": "function",
  "validateDouyinParams": "function",
  "validateKuaishouParams": "function",
  "validatePassportVerifyCode": "function",
  "validateXiaohongshuParams": "function",
  "wbi_sign": "function",
  "xiaohongshuApiUrls": "object",
  "xiaohongshuFetcher": "object",
  "xiaohongshuSign": "function",
  "xiaohongshuUtils": "object",
}
`;

exports[`客户端实例形状 > client.bilibili 的键集合被锁定 1`] = `
[
  "bilibiliApiUrls",
  "danmaku",
  "fetcher",
  "login",
  "sign",
]
`;

exports[`客户端实例形状 > client.douyin 的键集合被锁定 1`] = `
[
  "douyinApiUrls",
  "fetcher",
  "login",
  "passport",
  "sign",
]
`;

exports[`客户端实例形状 > client.kuaishou 的键集合被锁定 1`] = `
[
  "fetcher",
  "kuaishouApiUrls",
  "sign",
]
`;

exports[`客户端实例形状 > client.xiaohongshu 的键集合被锁定 1`] = `
[
  "fetcher",
  "sign",
  "xiaohongshuApiUrls",
]
`;

exports[`客户端实例形状 > 顶层键被锁定 1`] = `
[
  "bilibili",
  "douyin",
  "events",
  "kuaishou",
  "on",
  "once",
  "startServer",
  "xiaohongshu",
]
`;

exports[`构造函数上的静态属性 > 静态属性集合被锁定 1`] = `
[
  "bilibili",
  "bilibiliFetcher",
  "createBoundBilibiliFetcher",
  "createBoundDouyinFetcher",
  "createBoundKuaishouFetcher",
  "createBoundXiaohongshuFetcher",
  "douyin",
  "douyinFetcher",
  "events",
  "kuaishou",
  "kuaishouFetcher",
  "on",
  "once",
  "version",
  "xiaohongshu",
  "xiaohongshuFetcher",
]
`;
